# SimilarityAnswerMatcher

./: Dockerfile  README.md  docker-compose.yml  environment.yml  packages.txt  pyproject.toml  requirements.txt  setup.py  similarity_app.py  start.sh
.streamlit/: config.toml
